# deribit-trading-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: Deribit_FIX44.xml  FIX44.xml  deribit-md-hist.cfg  deribit-md.cfg  deribit-orders.cfg  deribit-testnet-md.cfg  deribit-testnet-orders.cfg  deribit-testnet.cfg  deribit.cfg  settings.example.txt
deribit-md/: AppRunner.cpp  AppRunner.h  Application.cpp  Application.h  ApplicationPersister.cpp  ApplicationPersister.h  AuthHandler.cpp  CMakeLists.txt  MarketDataLogger.cpp  SimpleConfig.cpp  SimpleConfig.h  main.cpp  main.h
deribit-md/config/: deribit.cfg
include/: AppRunner.h  Application.h  main.h
include/fix/: Application.h  ApplicationWrapper.h  FIXCustomTags.h  FIXRunner.h  FIXUtils.h  GWApplication.h  GWRunner.h  MDApplication.h  MDApplicationBase.h
include/gateway/: DeribitGWApplication.h  DeribitMessageConverter.h  DeribitOrdersHandler.h  GWApplication.h  GWRunner.h  HyperliquidGWApplication.h  HyperliquidOrdersHandler.h  OrdersHandler.h  RefDataHolder.h
include/historical/: ApplicationPersister.h  DeribitPersister.h  FileMessageProcessor.h  HyperliquidPersister.h  MarketDataLogger.h  MarketdataHistoricalRunner.h
include/marketdata/: DeribitMDApplication.h  DeribitMDApplicationBase.h  DeribitMessageProcessor.h  FixCustomTags.h  FixUtils.h  HyperliquidMDApplication.h  HyperliquidMDApplicationBase.h  HyperliquidMessageProcessor.h  MDApplication.h  MDApplicationBase.h  MarketDataLogger.h  (+2 more)
schema/: messages.xml
src/: AppRunner.cpp  Application.cpp  main.cpp
(+60 files in other folders)
